--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,16 @@
-body{
+body {
   padding: 0;
   margin: 0;
+  background-color: rgb(67, 68, 68);
 }
 
-#root{
+#root {
   padding: 0;
   margin: 0;
 }
 
 * {
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
