--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
 }
 
 
+.darkMode{
+  color: white ;
+  background-color: black;
+  
+}
+
 .countryImg img {
   height: 10em;
   width: 100%;
@@ -20,8 +26,9 @@
   flex-direction: column;
   /* background-color: rgb(255, 255, 255);   */
   border: 2px solid black;
-  background-color: lightgray;
+  /* background-color: lightgray; */
   border-radius: 1em;
+  box-shadow: 0 0 10px white;
 }
 
 
@@ -52,16 +59,18 @@ h4 {
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 1em;
-  background-color: antiquewhite;
+  padding: 1em; 
+  box-shadow: 0 0 10px white;
+   /* background-color: antiquewhite; */
 }
 
 .search {
   display: flex;
   width: 100%;
+  height: 2em;
   justify-content: space-around;
   align-items: center;
-  background-color: rgb(174, 209, 209);
+  /* background-color: rgb(174, 209, 209); */
 }
 
 
@@ -80,5 +89,13 @@ h4 {
 
 .dropdownOption {
   height: 1em;
-  /* width: 5em; */
 }
+
+h2{
+  color: red;
+}
+
+#Loading{
+  color: green;
+}
+/*  */
