--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: rgb(67, 68, 68);
+  /* background-color: rgb(67, 68, 68); */
+
 }
 
 #root {
